--- a/public/locales/am/common.json
+++ b/public/locales/am/common.json
@@ -96,6 +96,10 @@
       "land": "Նման երկրներ, որոնք կարող են ձեզ դուր գալ",
       "apartment": "Նմանատիպ բնակարաններ, որոնք ձեզ դուր կգան"
     },
+    "dynamicTitle": {
+      "forRent": "Տրվում է վարձով <span>{{type}}</span> <span>{{region}}</span>ում:",
+      "forSale": "Վաճռավում է <span>{{type}}</span> <span>{{region}}</span>ում:"
+    },
     "houseDesc": {
       "desc": "Բարի գալուստ <span>{{region}}</span>-ի տուն: Այս գեղեցիկ տունը գտնվում է <span>{{isNewBuilding}}</span> <span>{{floorsCount}}</span> հարկանի շենքում: Տան ընդհանուր մակերեսը <span>{{floorArea}}</span> քառակուսի մետր է, <span>{{isHasMuchFloorArea}}</span>: <span>{{isHasElevator}}</span> Ընդամենը <span>{{rooms}}</span> <span>{{isHasMuchRooms}}</span>-ում: <span>{{isHasBath}}</span> <span>{{isHasFurniture}}</span> Ձեզ դուր կգա ապրել այս գեղեցիկ տանը <span>{{region}}</span>-ում, որտեղ դուք կգտնեք ամեն ինչ անհրաժեշտ է հարմարավետ կյանքի համար!",
       "isHas": {
@@ -108,7 +112,7 @@
       }
     },
     "officeDesc": {
-      "desc": "Բարի գալուստ մեր գրասենյակ: Մենք գտնվում ենք <span>{{currentFloor}}</span> հարկում <span>{{floorsCount}}</span> հարկանի շենքի <span>{{isHasElevator}}</span> Ընդհանուր մակերեսը գրասենյակի տարածքը <span> {{floorArea}}</span> քառակուսի մետր է<span>{{isHasMuchFloorArea}}</span> Գրասենյակն ունի <span>{{rooms}}</span> առանձին սենյակներ, որոնք կարող է օգտագործվել աշխատանքի, հանդիպումների և բանակցությունների համար: Լոգասենյակների թիվը՝ <span>{{isHasBath}}</span>{{isHasMuchBath}}<span> <span>{{isHasFurniture}}</span>",
+      "desc": "Բարի գալուստ մեր գրասենյակ: Մենք գտնվում ենք <span>{{floorsCount}}</span> հարկանի շենքի <span>{{currentFloor}}</span> հարկում: <span>{{isHasElevator}}</span> Ընդհանուր մակերեսը գրասենյակի տարածքը <span> {{floorArea}}</span> քառակուսի մետր է<span>{{isHasMuchFloorArea}}</span> Գրասենյակն ունի <span>{{rooms}}</span> առանձին սենյակներ, որոնք կարող է օգտագործվել աշխատանքի, հանդիպումների և բանակցությունների համար: Լոգասենյակների թիվը՝ <span>{{isHasBath}}</span>{{isHasMuchBath}}<span> <span>{{isHasFurniture}}</span>",
       "isHas": {
         "elevator": "Շենքն ունի վերելակ՝ գրասենյակ հեշտ մուտք գործելու համար։",
         "isNewBuilding": "նորակառույց",
@@ -119,7 +123,7 @@
       }
     },
     "apartmentDesc": {
-      "desc": "Բնակարանը գտնվում է <span>{{currentFloor}}</span> հարկում <span>{{floorsCount}}</span> հարկանի շենքի <span>{{isHasElevator}}</span>-ում: Բնակարանն ունի <span>{{rooms}}</span> սենյակ(ներ), <span>{{baths}}</span> լոգարան <span>{{isHasFurniture}}</span> <span>{{isNewBuilding}}</span>",
+      "desc": "Բնակարանը գտնվում է <span>{{currentFloor}}</span> հարկում <span>{{floorsCount}}</span> հարկանի շենքի <span>{{isHasElevator}}</span>: Բնակարանն ունի <span>{{rooms}}</span> սենյակ(ներ), <span>{{baths}}</span> լոգարան <span>{{isHasFurniture}}</span> <span>{{isNewBuilding}}</span>",
       "isHas": {
         "elevator": "ինտեգրված վերելակով",
         "isNewBuilding": "Շենքը պատկանում է նորակառույցներին։",
@@ -162,8 +166,7 @@
       "view": "Տեսք",
       "action": "Գործողություն"
     },
-    "newPrd": {
-      "title": "Ավելացնել նոր անշարժ գույք",
+    "newPrd": {      "title": "Ավելացնել նոր անշարժ գույք",
       "steps": {
         "desc": "Նկարագրություն",
         "media": "Մեդիա",
@@ -273,6 +276,26 @@
       "your_email": "Ձեր էլ.փոստը",
       "your_phone": "Դու հեռախոս",
       "message": "հաղորդագրություն"
+    }
+  },
+  "footer": {
+    "popular_searches": {
+      "title": "Հավանական Որոնումներ",
+      "apartment_for_rent": "Վարձով բնակարան",
+      "apartment_low_to_hide": "Բնակարան ցածր գնով թաքցնելու համար",
+      "offices_for_buy": "Գրասենյակներ գնելու համար",
+      "offices_for_rent": "Գրասենյակներ վարձով"
+    },
+    "quick_links": {
+      "title": "Արագ հղումներ",
+      "terms_of_use": "Օգտվելու պայմաններ",
+      "privacy_policy": "Գաղտնիության համաձայնում",
+      "contact_support": "Կապ հաստատեք",
+      "careers": "Կարիերային համագործում"
+    },
+    "sign_up_for_our_newsletter": {
+      "title": "Գրանցվեք մեր նորությունների լրացումների համար",
+      "your_email": "Ձեր էլ. հասցեն"
     }
   }
 }
