--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -281,6 +281,7 @@
     }
   },
   "footer": {
+    "rights": "All Rights Reserved",
     "popular_searches": {
       "title": "Popular Searches",
       "apartment_for_rent": "Apartment for Rent",
