--- a/public/locales/am/common.json
+++ b/public/locales/am/common.json
@@ -279,6 +279,7 @@
     }
   },
   "footer": {
+    "rights": "Բոլոր իրավունքները պաշտպանված են",
     "popular_searches": {
       "title": "Հավանական Որոնումներ",
       "apartment_for_rent": "Վարձով բնակարան",
